# monolibs

./: .gitignore  .gitmodules  CMakeLists.txt  test.cpp
.cache/clangd/index/: functional.h.5FFB1A57042FEE09.idx  monolibs.cpp.6E99F112A4630091.idx  test.cpp.8444D7B59B3D46BD.idx  test.cpp.A25B705F006A1080.idx
include/extlibs/: concepts_ext.h  ranges_ext.h
include/jsonlib/: jsonpp.h
include/monolibs/: examples.h  linear_algebra.h  utility.h  vector.h
monolibs/: CMakeLists.txt  design_pattern.h  examples.h  functional.h  linear_algebra.h  type_traits.h  utility.h
src/: test.cpp
